@@ -5,6 +5,7 @@
  */
 package org.h2.security.auth;
 
+import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -13,7 +14,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
+import javax.xml.parsers.ParserConfigurationException;
 import org.h2.api.CredentialsValidator;
 import org.h2.api.UserToRolesMapper;
 import org.h2.engine.Database;
@@ -26,6 +27,7 @@ import org.h2.message.Trace;
 import org.h2.security.auth.impl.AssignRealmNameRole;
 import org.h2.security.auth.impl.JaasCredentialsValidator;
 import org.h2.util.StringUtils;
+import org.xml.sax.SAXException;
 
 /**
  * Default authenticator implementation.
@@ -93,8 +95,6 @@ public class DefaultAuthenticator implements Authenticator {
 
     /**
      * If set save users externals defined during the authentication.
-     *
-     * @return
      */
     public boolean isPersistUsers() {
         return persistUsers;
@@ -106,8 +106,6 @@ public class DefaultAuthenticator implements Authenticator {
 
     /**
      * If set create external users in the database if not present.
-     *
-     * @return
      */
     public boolean isAllowUserRegistration() {
         return allowUserRegistration;
@@ -120,8 +118,6 @@ public class DefaultAuthenticator implements Authenticator {
     /**
      * When set create roles not found in the database. If not set roles not
      * found in the database are silently skipped
-     *
-     * @return
      */
     public boolean isCreateMissingRoles() {
         return createMissingRoles;
@@ -170,9 +166,7 @@ public class DefaultAuthenticator implements Authenticator {
      * <li>Use the default configuration hard coded</li>
      * </ol>
      *
-     * @param database
-     *            where authenticator is initialized
-     * @throws AuthConfigException
+     * @param database where authenticator is initialized
      */
     @Override
     public void init(Database database) throws AuthConfigException {
@@ -230,35 +224,34 @@ public class DefaultAuthenticator implements Authenticator {
     /**
      * Configure the authenticator from a configuration file
      *
-     * @param configUrl
-     *            URL of configuration file
-     * @throws Exception
+     * @param configUrl URL of configuration file
      */
-    public void configureFromUrl(URL configUrl) throws Exception {
+    public void configureFromUrl(URL configUrl) throws AuthenticationException,
+            SAXException, IOException, ParserConfigurationException {
         H2AuthConfig config = H2AuthConfigXml.parseFrom(configUrl);
         configureFrom(config);
     }
 
-    void configureFrom(H2AuthConfig config) throws Exception {
+    void configureFrom(H2AuthConfig config) throws AuthenticationException {
         allowUserRegistration = config.isAllowUserRegistration();
         createMissingRoles = config.isCreateMissingRoles();
         Map<String, CredentialsValidator> newRealms = new HashMap<>();
         for (RealmConfig currentRealmConfig : config.getRealms()) {
             String currentRealmName = currentRealmConfig.getName();
             if (currentRealmName == null) {
-                throw new Exception("Missing realm name");
+                throw new AuthenticationException("Missing realm name");
             }
             currentRealmName = currentRealmName.toUpperCase();
             CredentialsValidator currentValidator = null;
             try {
                 currentValidator = (CredentialsValidator) Class.forName(currentRealmConfig.getValidatorClass())
-                        .newInstance();
+                        .getDeclaredConstructor().newInstance();
             } catch (Exception e) {
-                throw new Exception("invalid validator class fo realm " + currentRealmName, e);
+                throw new AuthenticationException("invalid validator class fo realm " + currentRealmName, e);
             }
             currentValidator.configure(new ConfigProperties(currentRealmConfig.getProperties()));
             if (newRealms.put(currentRealmConfig.getName().toUpperCase(), currentValidator) != null) {
-                throw new Exception("Duplicate realm " + currentRealmConfig.getName());
+                throw new AuthenticationException("Duplicate realm " + currentRealmConfig.getName());
             }
         }
         this.realms = newRealms;
@@ -267,9 +260,9 @@ public class DefaultAuthenticator implements Authenticator {
             UserToRolesMapper currentUserToRolesMapper = null;
             try {
                 currentUserToRolesMapper = (UserToRolesMapper) Class
-                        .forName(currentUserToRolesMapperConfig.getClassName()).newInstance();
+                        .forName(currentUserToRolesMapperConfig.getClassName()).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
-                throw new Exception("Invalid class in UserToRolesMapperConfig", e);
+                throw new AuthenticationException("Invalid class in UserToRolesMapperConfig", e);
             }
             currentUserToRolesMapper.configure(new ConfigProperties(currentUserToRolesMapperConfig.getProperties()));
             newUserToRolesMapper.add(currentUserToRolesMapper);
